--- a/src/components/ItemAdd.css
+++ b/src/components/ItemAdd.css
@@ -3,6 +3,8 @@
 
     display: flex;
     justify-content: center;
+    margin: 20px 0px 20px 0px;
+    padding: 10px 0px 10px 0px;
 }
 .add-items{
     width:40%;
