--- a/src/components/AddItem.css
+++ b/src/components/AddItem.css
@@ -17,11 +17,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 5px;
 }
 .add-item-field{
-    width: 80%;
+    min-width: 80%;
     padding: 10px;
-    margin: 10px 20px;
+    margin: 10px;
     border-bottom: lightgray 1px solid;
 }
 .upload {
