--- a/src/components/AddItem.css
+++ b/src/components/AddItem.css
@@ -7,11 +7,10 @@
     padding: 10px 0px 10px 0px;
 }
 .add-items{
-    width:40%;
+    width:60%;
     text-align: center;
     background-color: #eeeeee;
 }
-
 
 .add-item{
     display: flex;
@@ -24,6 +23,9 @@
     padding: 10px;
     margin: 10px;
     border-bottom: lightgray 1px solid;
+}
+.choose{
+    margin-left: 15px;
 }
 .upload {
     width: 80%;
@@ -48,9 +50,11 @@ fieldset.categories {
     margin-top: 10px;
 }
 @media (max-width: 754px) {
-    .add-items {
-
-        width:80%;
+    /*.add-items {*/
+    /*}*/
+    .itemInfo {
+        width:90%;
+        margin: 10px auto;
     }
     /*.form-content-right {*/
     /*    width: 100%;*/
