--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,7 @@ button {
   max-width: 1060px;
   margin: 0 auto;
   background-color: lightgray;
+
 }
 .portal{
   display:flex;
@@ -110,7 +111,7 @@ button {
 }
 .content{
   width: 70%;
-  margin: 50px auto;
+  margin: 70px auto;
   padding: 20px;
   background-color: #eeeeee;
 }
@@ -275,22 +276,30 @@ form .formContainer label {
 .water-care{
   background-color: lightblue;
   padding: 5px;
+  display: flex;
 
 }
+.care-icon {
+  margin: 5px 10px;
+}
+
+
 .care {
   background-color: paleturquoise;
   padding: 5px;
+  display: flex;
 
 }
 .light-care {
   background-color: lemonchiffon;
   padding: 5px;
+  display: flex;
 
 }
 .food-care {
   background-color: #f6d0f6;
   padding: 5px;
-
+  display: flex;
 }
 /*.item .itemInfo {*/
 /*  background: #202342;*/
@@ -342,70 +351,100 @@ form .formContainer label {
 
 /* Full PLANT Styles */
 
-.fullItem {
+
+.fullItem-container {
+  width: 70%;
+  margin: 20px auto 20px;
+
+  display: flex;
+  flex-direction: column;
+}
+.full-item {
   width: 100%;
-  min-height: calc(100vh - 58px);
+  display: flex;
+  flex-direction: row;
   background: #fff;
-  display: flex;
 }
-
-.fullItem .container {
-  margin: auto;
+.full-item-picture{
+  margin-right: 20px;
 }
-
-.fullItem .container .fullItemCard {
+.full-item-text{
+  margin-top: 20px;
+}
+.card-container {
+  background-color: aliceblue;
   width: 100%;
   display: flex;
+  flex-direction: row;
+
+}
+.full-item-card {
+ width: 30%;
+
+}
+.full-item-tools {
+  min-width:20%;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
 }
 
-.fullItem .container .fullItemCard .fullItemBg {
-  width: 100%;
-  max-width: 50%;
-  min-height: 600px;
-  height: 600px;
-}
 
-.fullItem .container .fullItemCard .fullItemInfo {
-  width: 100%;
-  max-width: 50%;
-  height: 600px;
-  max-height: 600px;
-  padding: 20px 38px;
-  background: #353b80;
-  color: #fff;
-  overflow-y: auto;
-  overflow-x: hidden;
-}
 
-.fullItem .container .fullItemCard .fullItemInfo::-webkit-scrollbar {
-  width: 1em;
-}
 
-.fullItem
-.container
-.fullItemCard
-.fullItemInfo::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px #142b44;
-  border-radius: 50px;
-}
+/*.fullItem-container .fullItemCard {*/
+/*  width: 100%;*/
+/*  display: flex;*/
+/*}*/
 
-.fullItem
-.container
-.fullItemCard
-.fullItemInfo::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.5);
-  outline: 1px solid slategrey;
-  border-radius: 50px;
-}
+/*.fullItem-container .fullItemCard .fullItemBg {*/
+/*  width: 100%;*/
+/*  max-width: 50%;*/
+/*  min-height: 600px;*/
+/*  height: 600px;*/
+/*}*/
 
-.fullItem .container .fullItemCard .fullItemInfo ul {
-  margin: 12px 0 0 0;
-}
+/*.fullItem-container .fullItemCard .fullItemInfo {*/
+/*  width: 100%;*/
+/*  max-width: 50%;*/
+/*  height: 600px;*/
+/*  max-height: 600px;*/
+/*  padding: 20px 38px;*/
+/*  background: #353b80;*/
+/*  color: #fff;*/
+/*  overflow-y: auto;*/
+/*  overflow-x: hidden;*/
+/*}*/
 
-.fullItem .container .fullItemCard .fullItemInfo ul li {
-  margin: 4px 0 0 0;
-  word-wrap: break-word;
-}
+/*.fullItem .container .fullItemCard .fullItemInfo::-webkit-scrollbar {*/
+/*  width: 1em;*/
+/*}*/
+
+/*.fullItem*/
+/*.container*/
+/*.fullItemCard*/
+/*.fullItemInfo::-webkit-scrollbar-track {*/
+/*  box-shadow: inset 0 0 6px #142b44;*/
+/*  border-radius: 50px;*/
+/*}*/
+
+/*.fullItem*/
+/*.container*/
+/*.fullItemCard*/
+/*.fullItemInfo::-webkit-scrollbar-thumb {*/
+/*  background: rgba(0, 0, 0, 0.5);*/
+/*  outline: 1px solid slategrey;*/
+/*  border-radius: 50px;*/
+/*}*/
+
+/*.fullItem .container .fullItemCard .fullItemInfo ul {*/
+/*  margin: 12px 0 0 0;*/
+/*}*/
+
+/*.fullItem .container .fullItemCard .fullItemInfo ul li {*/
+/*  margin: 4px 0 0 0;*/
+/*  word-wrap: break-word;*/
+/*}*/
 
 #footer{
   height: 150px;
