latinname and itemUpdateform

--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,7 @@ button {
 .page-header{
   text-align: center;
   color: #00828e;
+  margin-bottom: 20px;
 }
 .page-text{
   text-align: center;
@@ -121,11 +122,11 @@ button {
 nav {
   width: 100%;
   min-height: 10vh;
+  margin-bottom: 30px;
   padding: 16px 0;
   background: cadetblue;
   display: flex;
   justify-content: space-around;
-
   align-items: center;
   padding: 0 1.5em;
 }
@@ -265,6 +266,7 @@ form .formContainer label {
   margin: auto;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 
 }
 .itemInfo{
@@ -354,8 +356,7 @@ form .formContainer label {
 
 .fullItem-container {
   width: 70%;
-  margin: 20px auto 20px;
-
+  margin:auto;
   display: flex;
   flex-direction: column;
 }
@@ -451,7 +452,7 @@ form .formContainer label {
   background-color: #00828e;
   color: #eeeeee;
   text-align: center;
-  margin-top: auto;
+  margin-top: 50px;
 }
 
 /* Media Queries */
