--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@ button {
 nav {
   width: 100%;
   min-height: 10vh;
-  margin-bottom: 30px;
+  /*margin-bottom: 30px;*/
   padding: 16px 0;
   background: cadetblue;
   display: flex;
@@ -170,7 +170,9 @@ nav h2 {
   line-height: 1;
   color: #fff;
 }
-
+.logo-icon{
+  color: #fff;
+}
 .logo span {
   color: greenyellow;
   font-weight: 800;
@@ -261,7 +263,7 @@ form .formContainer label {
   width: 100%;
   height: 280px;
 }*/
-/*eigen stukje*/
+/*Plants styles*/
 .item-container{
   width:90%;
   margin: auto;
@@ -269,12 +271,14 @@ form .formContainer label {
   flex-wrap: wrap;
   justify-content: center;
 
+
 }
 .itemInfo{
   width: 250px;
   background-color: white;
   margin: 10px;
   padding:10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 .water-care{
   background-color: lightblue;
@@ -360,6 +364,7 @@ form .formContainer label {
   margin:auto;
   display: flex;
   flex-direction: column;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 .full-item {
   width: 100%;
@@ -372,6 +377,7 @@ form .formContainer label {
 }
 .full-item-text{
   margin-top: 20px;
+  word-break: keep-all;
 }
 .card-container {
   background-color: aliceblue;
