--- a/src/components/Plant/Plant.css
+++ b/src/components/Plant/Plant.css
@@ -16,8 +16,8 @@
     text-align: center;
 }
 
-.fullItem-container {
-    width: 70%;
+.full-item-container {
+    width: 80%;
     margin:auto;
     display: flex;
     flex-direction: column;
@@ -33,7 +33,7 @@
     margin-right: 20px;
 }
 .full-item-text{
-    margin-top: 20px;
+    margin: 20px 20px;
     word-break: keep-all;
 }
 .card-container {
@@ -45,47 +45,101 @@
 
 }
 .full-item-card {
-    width: 30%;
+    width: 50%;
 
 }
 .full-item-tools {
-    min-width:20%;
+    width:100%;
     display: flex;
     flex-direction: row;
     align-content: center;
+    background-color: #FFFFFF;
 }
+
+.f-care-icon {
+    margin: 5px 10px;
+}
+.f-water-care{
+    background-color: lightblue;
+    padding: 5px;
+    display: flex;
+
+}
+
+.f-care {
+    background-color: paleturquoise;
+    padding: 5px;
+    display: flex;
+
+}
+.f-light-care {
+    background-color: lemonchiffon;
+    padding: 5px;
+    display: flex;
+
+}
+.f-food-care {
+    background-color: #f6d0f6;
+    padding: 5px;
+    display: flex;
+}
+/*.edit-btn{*/
+/*    width:120px;*/
+/*    background-color: #3498db;*/
+/*    font-size: 14px;*/
+/*    color:#fff;;*/
+/*    text-decoration: none;*/
+/*    margin: 10px;*/
+/*    padding: 10px;*/
+/*    font-weight: 400;*/
+/*    letter-spacing: 1px;*/
+/*    cursor: pointer;*/
+/*}*/
+/*.edit-img-btn{*/
+/*    background-color: darkcyan;*/
+/*    font-size: 14px;*/
+/*    color:#fff;;*/
+/*    text-decoration: none;*/
+/*    margin: 10px;*/
+/*    padding: 10px;*/
+/*    font-weight: 400;*/
+/*    letter-spacing: 1px;*/
+/*    cursor: pointer;*/
+/*}*/
 
 
 @media (max-width: 855px) {
-    .fullItem .container .fullItemCard {
+
+    .full-item-picture{
+        margin-right: 0;
+        width:100%;
+    }
+    .card-container{
+        display: flex;
+        flex-direction: column;
+    }
+    .full-item-card{
+        width: 100%;
+    }
+    /*.full-item-tools{*/
+    /*    flex-direction: column;*/
+    /*}*/
+    /*.f-tools-container{*/
+    /*    display: flex;*/
+    /*    flex-direction: column;*/
+    /*}*/
+    .full-item {
         flex-direction: column;
         align-items: center;
     }
 
-    .fullItem .container .fullItemCard .fullItemBg {
-        max-width: 100%;
-        min-height: 280px;
-        height: 280px;
-    }
 
-    .fullItem .container .fullItemCard .fullItemInfo {
-        max-width: 100%;
-        height: auto;
-        max-height: 420px;
-    }
-
-    .fullItem .container .fullItemCard .fullItemInfo h2 {
-        font-size: 22px;
-    }
-
-    .fullItem .container .fullItemCard .fullItemInfo ul li {
-        font-size: 15px;
-    }
-
-    @media (max-width: 1110px) {
-        .container {
-            max-width: 94%;
-        }
+    @media (max-width: 755px) {
+        /*.f-tools-container{*/
+        /*    display: flex;*/
+        /*    flex-direction: column;*/
+        /*    align-content: center;*/
+        /*}*/
     }
 }
 
