--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -9,6 +9,28 @@
     /*padding-bottom: 20px;*/
 
 }
+.found-tools{
+    display: flex;
+    flex-direction: row;
+}
+.close-found{
+    position: relative;
+    right: -40%;
+    top: -70px;
+    border: 3px solid lightseagreen;
+    color:lightseagreen;
+    background-color: #eeeeee;
+    border-radius: 50%;
+    padding:0px;
+    width: 30px;
+    height: 30px;
+    font-weight: bold;
+}
+.close-found:hover{
+    background-color: lightseagreen;
+    color: #eeeeee;
+
+}
 /*.item-container{*/
 /*    width:90%;*/
 /*    margin: auto;*/
@@ -19,11 +41,12 @@
 
 /*}*/
 .found-item-info{
-    width: 80%;
+    width: 60%;
     background-color: white;
 
     padding:10px;
     margin: auto;
+    margin-bottom: 10px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 .water-care{
@@ -55,8 +78,21 @@
     display: flex;
 }
 
-@media (min-width: 755px) and (max-width: 1110px) {
-    .item {
-        max-width: 48%;
+/*@media (min-width: 755px) and (max-width: 1110px) {*/
+/*    .item {*/
+/*        max-width: 48%;*/
+/*    }*/
+/*    .found-tools{*/
+
+/*        flex-direction: column;*/
+/*    }*/
+/*}*/
+@media (max-width: 755px) {
+    .found-item-info {
+        max-width: 80%;
+    }
+    .found-tools{
+
+        flex-direction: column;
     }
 }
