--- a/src/components/reusableComponents/PlantIndex/PlantIndex.css
+++ b/src/components/reusableComponents/PlantIndex/PlantIndex.css
@@ -4,8 +4,45 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+}
+.btn-to-post {
+    display: inline-block;
+    /*border-radius: 4px;*/
+    background-color: darkseagreen;
+    border: none;
+    color: #FFFFFF;
+    text-decoration: none;
+    font-size: 14px;
+    padding: 5px;
+    width: 150px;
+    transition: all 0.5s;
+    cursor: pointer;
+    /*margin: 5px;*/
+}
 
+.btn-to-post span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
 
+.btn-to-post span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.btn-to-post:hover span {
+    padding-right: 10px;
+}
+
+.btn-to-post:hover span:after {
+    opacity: 1;
+    right: 0;
 }
 .itemInfo{
     width: 250px;
@@ -41,6 +78,10 @@
     background-color: #f6d0f6;
     padding: 5px;
     display: flex;
+}
+.tools{
+    display: flex;
+    flex-direction: column;
 }
 
 @media (min-width: 755px) and (max-width: 1110px) {
