--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -24,6 +24,8 @@
     width: 30px;
     height: 30px;
     padding:0px;
+    background-color: darkseagreen;
+    color: #FFFFFF;
 
 }
 .search-icon{
