--- a/src/components/Plant/Plant.css
+++ b/src/components/Plant/Plant.css
@@ -36,6 +36,10 @@
     margin: 20px 20px;
     word-break: keep-all;
 }
+.full-item-text p{
+    margin-top: 10px;
+
+}
 .card-container {
     background-color: aliceblue;
     width: 100%;
@@ -132,6 +136,7 @@
         flex-direction: column;
         align-items: center;
     }
+
 
 
     @media (max-width: 755px) {
