--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -14,9 +14,9 @@
     flex-direction: row;
 }
 .close-found{
-    position: relative;
-    right: -40%;
-    top: -70px;
+    position: absolute;
+    right: -10px;
+    top: -10px;
     border: 3px solid lightseagreen;
     color:lightseagreen;
     background-color: #eeeeee;
@@ -43,6 +43,7 @@
 .found-item-info{
     width: 60%;
     background-color: white;
+    position:relative;
 
     padding:10px;
     margin: auto;
