--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
 }
 
 h1 h2 h3 h4 h5{
-  margin-top: 10px;
+  margin-top: 25px;
 }
 
 /* Loader */
@@ -104,10 +104,9 @@ h1 h2 h3 h4 h5{
   align-items: center;
   align-content: center;
   flex-direction: column;
-
   min-height: 65%;
   width: 100%;
-  max-width: 1060px;
+  /*max-width: 1060px;*/
   /*margin: 0 auto;*/
   background-color: lightgray;
 
@@ -117,12 +116,12 @@ h1 h2 h3 h4 h5{
   flex-direction: row;
   justify-content: center;
 }
-.content{
-  width: 70%;
-  margin: 70px auto;
-  padding: 20px;
-  background-color: #eeeeee;
-}
+/*.content{*/
+/*  width: 70%;*/
+/*  margin: 70px auto;*/
+/*  padding: 20px;*/
+/*  background-color: #eeeeee;*/
+/*}*/
 
 
 
