--- a/src/components/UserDetail.css
+++ b/src/components/UserDetail.css
@@ -1,16 +1,15 @@
-.user-tools{
-    display: flex;
-    align-items: center;
-    align-content: center;
-}
-.user-btn{
-    margin: 20px;
-    padding: 10px;
-    background-color: #3498db;
-    color: white;
-    text-decoration: none;
-
-}
+/*.user-tools{*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    align-content: center;*/
+/*}*/
+/*.user-btn{*/
+/*    margin: 20px;*/
+/*    padding: 10px;*/
+/*    background-color: #3498db;*/
+/*    color: white;*/
+/*    text-decoration: none;*/
+/*}*/
 .user-detail{
     width:200px;
     text-align: left;
