--- a/src/components/reusableComponents/PlantIndex/PlantIndex.css
+++ b/src/components/reusableComponents/PlantIndex/PlantIndex.css
@@ -70,7 +70,8 @@
 
 }
 .light-care {
-    background-color: lemonchiffon;
+    background-color: #D8E898;
+    /*background-color: lemonchiffon;*/
     padding: 5px;
     display: flex;
 
