--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,14 +1,36 @@
+.logo-link{
+    display: flex;
+    flex-direction: row;
+}
+
 .logo {
     text-decoration: none;
-    font-size: 24px;
+    font-size: 28px;
     line-height: 1;
     color: #fff;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
 }
 .logo-icon{
-    color: #fff;
+   width: 20px;
+    margin-left: 10px;
 }
-.logo span {
-    color: greenyellow;
-    font-weight: 800;
-    margin-left: 2px;
-}
+/*.logo span {*/
+/*    color: greenyellow;*/
+/*    font-weight: 800;*/
+/*    margin-left: 2px;*/
+/*}*/
+/*.logo {*/
+/*    text-decoration: none;*/
+/*    font-size: 28px;*/
+/*    line-height: 1;*/
+/*    color: #fff;*/
+/*}*/
+/*.logo-icon{*/
+/*    color: #fff;*/
+/*}*/
+/*.logo span {*/
+/*    color: greenyellow;*/
+/*    font-weight: 800;*/
+/*    margin-left: 2px;*/
+/*}*/
