--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -18,7 +18,7 @@ nav h2 {
 
 .nav-menu {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     flex-flow: row;
     width: 80%;
     list-style: none;
@@ -28,14 +28,13 @@ nav h2 {
     padding: 10px 20px;
     margin: 0 10px;
     cursor: pointer;
-    font-size: 14px;
+    font-size: 16px;
     text-transform: uppercase;
     letter-spacing: 1px;
 }
 
 .nav-links a{
     color: #fff;
-
     text-decoration: none;
 }
 /*.activeLink{*/
@@ -61,7 +60,7 @@ nav h2 {
         display: block;
         color: white;
         position: absolute;
-        top: 10px;
+        top: 100px;
         right:10px;
     }
     .nav-menu-mobile{
