--- a/src/components/SearchResults/SearchResults.css
+++ b/src/components/SearchResults/SearchResults.css
@@ -1,5 +1,5 @@
 .found{
-    background-color: cadetblue;
+    background-color: lightgray;
     display: flex;
     flex-direction: column;
     align-content: center;
