--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -1,4 +1,37 @@
+.p-container{
+    font-weight:100;
+    color: white;
+    background-color: #00828e;
+}
+.greeting{
+    color: lightblue;
+}
 .profile{
-    /*display: flex;*/
+    margin-left: 40px;
+    color: cadetblue;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.profile a{
+    color: cadetblue;
+    text-decoration: none;
+}
+.profile a:hover{
+    color:  lightblue;
 
+}
+.profile >div{
+    margin:20px;
+}
+
+@media (max-width: 754px) {
+
+    .profile {
+        flex-direction: column;
+
+    }
+    .profile >div{
+        margin:5px;
+    }
 }
