--- a/src/components/Plants.css
+++ b/src/components/Plants.css
@@ -18,5 +18,7 @@
     width: 100%;
     /*max-width: 1060px;*/
     /*margin: 0 auto;*/
-    background-color: lightgray;
+    /*background-color: lightgray;*/
+    background-color: #f2f2f2;
+
 }
