--- a/src/components/UserForms/Form.css
+++ b/src/components/UserForms/Form.css
@@ -67,7 +67,7 @@
 .form-content-right {
     width: 35%;
     margin: 30px;
-    background-color: #eeeeee;
+    background-color: #E7E7E7;
     padding: 20px;
 /*   border-radius: 0 10px 10px 0;*/
 /*!*    position: relative;*!*/
