--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,8 @@ h1 h2 h3 h4 h5{
 /*  cursor: pointer;*/
 /*}*/
 #root{
-  background-color: lightgray;
+  /*background-color: lightgray;*/
+  background-color: #f2f2f2;
 }
 
 /*.content{*/
@@ -101,18 +102,18 @@ h1 h2 h3 h4 h5{
 
 /* Hero Styles */
 
-.hero {
-  width: 100%;
-  min-height: calc(100vh - 58px);
-  padding-bottom: 28px;
-  position: relative;
-}
+/*.hero {*/
+/*  width: 100%;*/
+/*  min-height: calc(100vh - 58px);*/
+/*  padding-bottom: 28px;*/
+/*  position: relative;*/
+/*}*/
 
-.hero .container:nth-of-type(2) {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
+/*.hero .container:nth-of-type(2) {*/
+/*  display: flex;*/
+/*  justify-content: space-between;*/
+/*  flex-wrap: wrap;*/
+/*}*/
 
 /* Search Styles */
 
