--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,4 +1,4 @@
-.p-container{
-    display: flex;
-    flex-direction: row;
-}
+/*.p-container{*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*}*/
