--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -4,7 +4,7 @@ nav {
     width: 100%;
     min-height: 10vh;
     /*margin-bottom: 30px;*/
-    padding: 16px 0;
+    /*padding: 16px 0;*/
     background: cadetblue;
     display: flex;
     justify-content: space-around;
@@ -20,12 +20,13 @@ nav h2 {
     display: flex;
     justify-content: flex-start;
     flex-flow: row;
+    height: 100%;
     width: 80%;
     list-style: none;
 }
 .nav-links{
     color: white;
-    padding: 10px 20px;
+    padding: 23px 20px;
     margin: 0 10px;
     cursor: pointer;
     font-size: 16px;
@@ -37,9 +38,20 @@ nav h2 {
     color: #fff;
     text-decoration: none;
 }
-/*.activeLink{*/
-/*    background-color: lightblue;*/
-/*}*/
+.nav-links a:hover{
+    color:#00828e;
+    /*background-color: #8ABBC3;*/
+}
+.nav-links a:active{
+    color:#00828e;
+    /*background-color: #8ABBC3;*/
+}
+
+
+.activeLink{
+    height:100%;
+   background-color: #8ABBC3;
+}
 .mobile-menu-icon{
     display:none;
 }
