--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -2,5 +2,6 @@
   width: 70%;
   margin: 70px auto;
   padding: 20px;
-  background-color: #eeeeee;
+  background-color: #ffff;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
