--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -14,7 +14,7 @@
     justify-content: center;
 }
 .profile a{
-    color: cadetblue;
+    color: #8ABBC3;
     text-decoration: none;
 }
 .profile a:hover{
