--- a/src/pages/UsersList/UsersList.css
+++ b/src/pages/UsersList/UsersList.css
@@ -6,6 +6,24 @@
     flex-direction: column;
     margin:20px;
 }
+.dropdown{
+    color:lightseagreen;
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
 .users-tools{
     border-top: lightgray 2px solid;
@@ -38,6 +56,7 @@
 .user-btn:hover{
     background-color: lightblue;
 }
+
 
 @media (max-width: 789px) {
 
