--- a/src/components/UserDelete/UserDelete.css
+++ b/src/components/UserDelete/UserDelete.css
@@ -1,6 +1,9 @@
 .user-delete{
     display: flex;
-    align-items: center;
+
+    align-items: flex-start;
+    align-content: center;
+    flex-direction: column;
 
 }
 
